# image_convolution_practice

./: .python-version  EXPERIMENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
src/: benchmark.py  convolution.py  kernels.py  main.py  padding.py
tests/: test_benchmark.py  test_integration.py
