[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "image_convolution"
version = "0.1.0"
dependencies = [
    "numpy==1.26.4",
    "pillow>=10.3.0",
    "opencv-python>=4.9.0.80",
]

[dependency-groups]
dev = ["pytest>=8.2.0", "ruff>=0.3.0"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
   "F",
    "W",
    "E",
    "N",
    "UP",
    "C4",
    "FA",
    "ISC",
    "ICN",
    "RET",
    "SIM",
]
