[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "image_convolution"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0", 
    "ruff>=0.3.0",
    "pillow>=10.3.0",
    "opencv-python>=4.9.0.80",
    "matplotlib>=3.8",
    "pytest-benchmark>=4",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
   "F",
    "W",
    "E",
    "N",
    "UP",
    "C4",
    "FA",
    "ISC",
    "ICN",
    "RET",
    "SIM",
]
